--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools==75.8.0", "wheel==0.45.1","cython==3.1.0a1","numpy>=2.0.0","pywin32==308"]
+requires = ["setuptools==75.8.0", "wheel==0.45.1","cython==3.1.0a1","numpy>=2.0.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
@@ -19,7 +19,6 @@ keywords = ["python","windows","media"]
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-  "scipy>=1.14.0",
   "numpy>=2.0.0",
 ]
 classifiers = [
