--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,9 +3,9 @@ setuptools==75.8.0
 wheel==0.45.1
 cython==3.1.0a1
 build==1.2.2
-cmake==3.31.4
+# cmake==3.31.4
 
-pywin32==308
+# pywin32==308
 
 # optional dependencies
 # pyinstrument==5.0.1
